# fluent-llm

./: CHANGELOG.md  README.md  experiments.ipynb  openai_pricing_links.txt  playground.ipynb  pylintrc  pyproject.toml  test_continuation_demo.py
.kiro/sessions/: conversation-architecture.html
.kiro/specs/async-generator-conversations/: design.md  requirements.md  tasks.md
.kiro/specs/conversation-serialization-and-assistant-injection/: architecture-decisions.md  design.md  requirements.md  tasks.md
.kiro/specs/conversation-tool-calling/: design.md  requirements.md  tasks.md
.windsurf/rules/: uv.md
src/fluent_llm/: __init__.py  builder.py  conversation.py  messages.py  model_selector.py  prompt.py  tools.py  usage_tracker.py  utils.py
src/fluent_llm/openai/: invoker.py  models.py
src/fluent_llm/providers/: provider.py
src/fluent_llm/providers/anthropic/: claude.py
src/fluent_llm/providers/openai/: gpt.py
tests/: test_async_generator_conversations.py  test_async_generator_live_integration.py  test_builder.py  test_conv_simple.py  test_convenience_methods.py  test_conversation.py  test_core_architecture.py  test_import_check.py  test_integration.py  test_live_api.py  test_live_api_anthropic.py  test_live_api_openai.py  test_message_list.py  test_minimal.py  test_mocked.py  test_openai_tool_calling.py  test_tool_calling.py  test_tool_calling_simple.py
